--- a/plugin.yml
+++ b/plugin.yml
@@ -1,8 +1,13 @@
 name: Guilds
 main: me.vaape.guilds.Guilds
 version: 1.0
+api-version: 1.17
 commands:
   guild:
+    description: Base guild command
   g:
+    description: Base guild command
   gc:
+    description: Toggle guild chat
   ac:
+    description: Toggle alliance chat
